--- a/src/views/rentals/rental.css
+++ b/src/views/rentals/rental.css
@@ -15,16 +15,13 @@
 
 
 
-.rental-header, .rental-data{
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: space-between;
+.rental-header, .rental-body{
+    margin-bottom: 10px;
 }
 
 .rental{
     margin-top: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 30px;
 }
 
 .rental-price{
@@ -73,7 +70,8 @@
     display: flex;
     align-items: center;
     text-align: center;
-
+    margin-bottom: 0%;
+    margin-top: 2%;
     color: #3E3E3E;
 }
 
@@ -83,6 +81,13 @@
     font-size: 20px;
     line-height: 133.4%;
     display: flex;
+    margin-top: 0%;
+    margin-bottom: 0%;
     align-items: center;
     color: #3E3E3E;
+}
+
+.rental-data{
+    /* margin-left: 20px;
+    margin-right: 30px; */
 }
