--- a/src/views/allRentals/rentals.css
+++ b/src/views/allRentals/rentals.css
@@ -1,7 +1,13 @@
+.rentals-section {
+    display: flex;
+    justify-content: center;
+}
+
 .rentals-container {
     display: flex;
     flex-wrap: wrap;
     width: 1300px;
+    cursor: pointer;
 }
 
 .rental-container {
