--- a/src/views/rentals/rental.css
+++ b/src/views/rentals/rental.css
@@ -20,7 +20,7 @@
 }
 
 .rental{
-    margin-top: 50px;
+    margin-top: 10px;
     margin-left: 30px;
 }
 
@@ -120,4 +120,12 @@
     font-weight: 700;
     font-size: 30px;
     line-height: 133.4%;
+}
+
+.prev:before,
+.next:before,
+.nav-text:before {
+  color: rgb(134, 134, 134);
+  font-size: 50px;
+  cursor: pointer;
 }
